--- a/views/idfa.ejs
+++ b/views/idfa.ejs
@@ -22,7 +22,7 @@ home videos show, making home videos, home and away videos, astronaut aliens, 10
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-37464803-1', 'auto');
+ga('create', 'UA-167311-38', 'auto');
 ga('send', 'pageview');
 </script>
 <!-- End Google Analytics -->
