--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -103,7 +103,7 @@ initSocket();
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-37464803-1']);
+  _gaq.push(['_setAccount', 'UA-167311-38']);
   _gaq.push(['_trackPageview']);
 
   (function() {
