--- a/views/v2.ejs
+++ b/views/v2.ejs
@@ -23,17 +23,10 @@ home videos show, making home videos, home and away videos, astronaut aliens, 10
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-37464803-1', 'auto');
+ga('create', 'UA-167311-38', 'auto');
 ga('send', 'pageview');
 </script>
 <!-- End Google Analytics -->
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KQR69W9');</script>
-<!-- End Google Tag Manager -->
 
 <style>
 
@@ -225,10 +218,6 @@ video#bgvid {
 </head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KQR69W9"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 <video playsinline autoplay="" muted loop id="bgvid">
     <source src="https://raw.githubusercontent.com/wonga00/astronaut/master/public/images/earth.mp4" type="video/mp4">
 </video>
